--- a/packages/hello-world/package.json
+++ b/packages/hello-world/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Straightforward example",
   "scripts": {
-    "test": "mocha test.spec.js"
+    "test": "mocha test*.spec.js"
   },
   "engines": {
     "node": ">=10.0.0"
